--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Select</title>
 		<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-		<link rel="stylesheet" href="dist/style.min.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
@@ -25,6 +25,22 @@
 			<div id="select" data-select="select"></div>
 
 		</div>
-		<script src="dist/index.min.js"></script>
+
+		<script src="index.js"></script>
+		<script>
+			const select = new Select({
+				selector: '#select',
+				label: 'Выберите из списка',
+				url: 'https://jsonplaceholder.typicode.com/todos',
+				onSelect(selectedItem) {
+					console.log(`Выбран элемент с названием '${selectedItem}'`)
+				}
+			})
+
+			document.querySelector('#select').addEventListener('select.change', (e) => {
+				const selectedItem = e.target.querySelector('.select__item_selected').textContent;
+				console.log(`Выбранное значение: ${selectedItem}`);
+			});
+		</script>
 	</body>
 </html>
