call methods of object

--- a/index.html
+++ b/index.html
@@ -12,12 +12,8 @@
 			<div class="settings">
 				<h2>Действия</h2>
 				<ul id="actions">
-					<li><button data-type="open">Открыть</button></li>
-					<li><button data-type="close">Закрыть</button></li>
-					<li><button data-type="set">Выбрать 5 индекс</button></li>
-					<li><button data-type="get">Получить выбранный</button></li>
-					<li><button data-type="clear">Очистить</button></li>
-					<li><button data-type="destroy">Уничтожить</button></li>
+					<li><button data-type="open" onclick="select.show()">Открыть</button></li>
+					<li><button data-type="close" onclick="select.hide()">Закрыть</button></li>
 				</ul>
 				<p id="log"></p>
 			</div>
